# algophon

./: .gitignore  README.md  pyproject.toml
algophon/: __init__.py  ipa.txt  natclass.py  seg.py  seginv.py  segstr.py  symbols.py
algophon/data_structures/: __init__.py  graph.py
algophon/distance/: edit_distance.py
algophon/ipa/: __init__.py  convert.py
algophon/models/: README.md  __init__.py  rule.py
algophon/models/D2L/: __init__.py  d2l.py  discrepancy.py  rule.py  tier.py
algophon/models/Miaseg/: __init__.py  miaseg.py  paradigm.py
algophon/models/PLP/: __init__.py  discrepancy.py  grammar.py  plp.py  rule.py
algophon/utils/: __init__.py  en_syllabify.py  utils.py
tests/: test_d2l.py  test_data_structures.py  test_distance.py  test_en_syllabify.py  test_miaseg.py  test_natclass.py  test_seg.py  test_seginv.py  test_segstr.py  test_utils.py  tester.py
tests/data/finley/: exp-1-train.txt  exp-2-train.txt
tests/data/mcmullin_hansson/: exp-1a-train.txt  exp-1b-train.txt  exp-2a-train.txt  exp-2b-train.txt
tests/data/miaseg/: ipa_paper_example.txt  paper_example.txt  toy_example.txt
