[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algophon"
version = "0.0.1"
authors = [
    { name = "Caleb Belth" },
]
description = "Tools for an algorithmic approach to phonology (some useful to computational phonology and morphology more broadly)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0" }
keywords = [
    "computational linguistics",
    "phonology",
    "morphology",
    "natural language processing",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cbelth/algophon"
